# YahooMail

./: README.md  log.conf  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-app.yml
yahoo/: .pyproject.toml.icloud  pyproject.toml
