[tool.poetry]
name = "yahoomail"
version = "0.1.0"
description = ""
authors = ["unisebcin <97784790+unisebcin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
