[tool.poetry]
name = "yahoo"
version = "0.1.0"
description = ""
authors = ["unisebcin <97784790+unisebcin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "yahoo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
